Montserrat fix for Our World In Data graphs (old + new)

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 <li><a href="./mc.html">Monaco (MC)</a></li>
 <li><a href="./mn.html">Mongolia (MN)</a></li>
 <li><a href="./me.html">Montenegro (ME)</a></li>
+<li><a href="./ms.html">Montserrat (MS)</a></li>
 <li><a href="./ma.html">Morocco (MA)</a></li>
 <li><a href="./mz.html">Mozambique (MZ)</a></li>
 <li><a href="./mm.html">Myanmar (MM)</a></li>
