GitHub / GitLab pages update for Kosovo

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 <li><a href="./kz.html">Kazakhstan (KZ)</a></li>
 <li><a href="./ke.html">Kenya (KE)</a></li>
 <li><a href="./ki.html">Kiribati (KI)</a></li>
+<li><a href="./xk.html">Kosovo (XK)</a></li>
 <li><a href="./kw.html">Kuwait (KW)</a></li>
 <li><a href="./kg.html">Kyrgyzstan (KG)</a></li>
 <li><a href="./la.html">Laos (LA)</a></li>
